--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,8 @@
+body{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
 .appbarcolor{
     color: bisque;
     
@@ -17,11 +22,20 @@
     color: #7091AB;
 }
 
-/* .img{
-    background-image: url(https://images.pexels.com/photos/7704220/pexels-photo-7704220.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-   
+
+.card:hover{
+    box-shadow: 0.2px 0.3px  10px 7px rgb(136, 132, 132);
+
+
 }
-.img:hover{
-    background-image: url(https://images.pexels.com/photos/8536926/pexels-photo-8536926.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
-  
-} */
+
+
+a{
+    color: cadetblue;
+    padding: 7px;
+}
+a:hover{
+    text-align: center;
+    color: rgb(84, 103, 104);
+}
+
