--- a/homepage.css
+++ b/homepage.css
@@ -1,5 +1,7 @@
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+    
 }
 
 
@@ -25,6 +27,9 @@ body{
 
 .card:hover{
     box-shadow: 0.2px 0.3px  10px 7px rgb(136, 132, 132);
+    transform: translateX(-15);
+    
+
 
 
 }
