--- a/homepage.css
+++ b/homepage.css
@@ -2,7 +2,8 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     left: 0rem;
     right: 0rem;
-    overflow-x: hidden;
+    scroll-behavior: auto;
+  
 
     
 }
